<resources>
    <string name="app_name">Influenz 2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="ikon_sukses">Ikon Sukses</string>
    <string name="splash_logo">splash_logo</string>
    <string name="success_icon_desc">sucess_icon_desc</string>
    <string name="kirim">Kirim</string>
    <string name="email">Email</string>
    <string name="masukkan_email_anda_untuk_mereset_password">Masukkan email Anda untuk mereset password.</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="kembali">Kembali</string>
    <string name="email_telah_dikirim_ke_alamat_anda_silahkan_periksa_email_untuk_melanjutkan_proses_reset_password">Email telah dikirim ke alamat Anda. Silahkan periksa email untuk melanjutkan proses reset password.</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="Kembali">Kembali</string>
    <string name="email_terkirim">Email Terkirim</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="konfirmasi_kata_sandi_baru">Konfirmasi Kata Sandi Baru</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="kode_perubahan_sandi">Kode Perubahan Sandi</string>
    <string name="ganti_kata_sandi">Ganti Kata Sandi</string>
    <string name="kata_sandi_diubah">Kata Sandi Diubah</string>
    <string name="password_anda_telah_berhasil_diubah">Password Anda telah berhasil diubah.</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="daftar">Daftar</string>
    <string name="masuk_dengan_facebook">Masuk dengan Facebook</string>
    <string name="atau_masuk_dengan">Atau masuk dengan</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="Email">Email</string>
    <string name="aplikasi_terlengkap_untuk_edukasi_komunitas_dan_afiliasi">Aplikasi terlengkap untuk edukasi, komunitas, dan afiliasi</string>
    <string name="Masuk">Masuk</string>
    <string name="judul_onboarding">Judul Onboarding</string>
    <string name="deskripsi_singkat_mengenai_fitur_atau_informasi_yang_ingin_disampaikan">Deskripsi singkat mengenai fitur atau informasi yang ingin disampaikan.</string>
    <string name="skip">Skip</string>
    <string name="Next">Next</string>
    <string name="todo">TODO</string>
    <string name="nomor_whatsapp">Nomor WhatsApp</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="sign_up">Sign Up</string>
    <string name="sudah_punya_akun_login">Sudah punya akun? Login</string>
    <string name="Kata_sandi">Kata Sandi</string>
    <string name="email3">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="signup">Sign Up</string>
    <string name="Influenz2">influenz2</string>
    <string name="produk_kami">Produk Kami</string>
    <string name="jelajahi_produk_terbaik_kami">Jelajahi produk terbaik kami.</string>
    <string name="tambah_ke_keranjang">Tambah ke Keranjang</string>
    <string name="kelas_yang_tersedia">Kelas yang tersedia</string>
    <string name="pilih_dari_berbagai_modul_edukasi_untuk_memulai">Pilih dari berbagai modul edukasi untuk memulai.</string>
    <string name="tambah_kelas_baru">Tambah Kelas Baru</string>
    <string name="background_image">Background Image</string>
    <string name="_1000_points">1000 Points</string>
    <string name="_100_produk">100 Produk</string>
    <string name="_100_modul">100 Modul</string>
    <string name="spesial_hari_ini">Spesial Hari Ini</string>
    <string name="lanjutkan_modul">Lanjutkan Modul</string>
    <string name="ketik_pesan_anda">Ketik pesan Anda</string>
    <string name="kirim_pesan">Kirim pesan</string>
    <string name="logout">Logout</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="johndoe_example_com">johndoe@example.com</string>
    <string name="john_doe">John Doe</string>
    <string name="profile_image">Profile Image</string>
    <string name="nama_produk">Nama produk</string>
    <string name="harga">Harga</string>
    <string name="Profile_image">Profile Image</string>
    <string name="hello_how_are_you">Hello, how are you?</string>
    <string name="_10_30_am">10:30 AM</string>
    <string name="notifications">Notifications</string>
    <string name="chat_name">Chat Name</string>
    <string name="login_masuk">login_masuk</string>
    <string name="login_google">login_google</string>
    <string name="login_facebook">login_facebook</string>
    <string name="tombol_sign_up">tombol_sign_up</string>
    <string name="tombol_login_masuk">tombol_login_masuk</string>
    <string name="tombol_login_google">tombol_login_google</string>
    <string name="tombol_login_facebook">tombol_login_facebook</string>
    <string name="featured_products_description">featured_products_description</string>
    <string name="view_products_description">view_products_description</string>
</resources>