<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewForgotPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Judul Lupa Password -->
        <TextView
            android:id="@+id/tvForgotPasswordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="40dp" />

        <!-- Instruksi untuk mereset password -->
        <TextView
            android:id="@+id/tvForgotPasswordInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masukkan_email_anda_untuk_mereset_password"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="8dp" />

        <!-- Jeda ruang -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <!-- Field Email -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/button_rounded_gr"
            android:padding="12dp" />

        <!-- Jeda ruang -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <!-- Tombol Kirim -->
        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/kirim"
            android:background="@drawable/button_rounded_pu"
            android:textColor="@android:color/white" />

        <!-- Jeda ruang -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <!-- Tombol Kembali -->
        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/kembali"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/black" />
    </LinearLayout>
</ScrollView>
