<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewChangePassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Judul Layar: Ganti Kata Sandi -->
        <TextView
            android:id="@+id/tvChangePasswordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ganti_kata_sandi"
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="40dp" />

        <!-- Jeda ruang -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <!-- Field Kode Perubahan Sandi -->
        <EditText
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/kode_perubahan_sandi"
            android:inputType="text"
            android:background="@drawable/button_rounded_gr"
            android:padding="12dp"
            android:layout_marginTop="16dp" />

        <!-- Field Kata Sandi Baru -->
        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/kata_sandi_baru"
            android:inputType="textPassword"
            android:background="@drawable/button_rounded_gr"
            android:padding="12dp"
            android:layout_marginTop="16dp" />

        <!-- Field Konfirmasi Kata Sandi Baru -->
        <EditText
            android:id="@+id/etConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/konfirmasi_kata_sandi_baru"
            android:inputType="textPassword"
            android:background="@drawable/button_rounded_gr"
            android:padding="12dp"
            android:layout_marginTop="16dp" />

        <!-- Tombol Ubah Kata Sandi -->
        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/ubah_kata_sandi"
            android:background="@drawable/button_rounded_pu"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</ScrollView>
