<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewEmailSent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Judul Email Terkirim -->
        <TextView
            android:id="@+id/tvEmailSentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_terkirim"
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="40dp" />

        <!-- Pesan instruksi -->
        <TextView
            android:id="@+id/tvEmailSentMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_telah_dikirim_ke_alamat_anda_silahkan_periksa_email_untuk_melanjutkan_proses_reset_password"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="20dp" />

        <!-- Jeda ruang -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <!-- Tombol Lanjutkan -->
        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/lanjutkan"
            android:background="@drawable/button_rounded_pu"
            android:textColor="@android:color/white" />

        <!-- Jeda ruang -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <!-- Tombol Kembali -->
        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Kembali"
            android:background="@drawable/button_rounded_gr"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
